--- a/withdrawal.html
+++ b/withdrawal.html
@@ -4,7 +4,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
       <meta name="google-site-verification" content="GmV9dEQzS4Avy6aWuP-yAqCVbHEJHBFk-MGTESg4a-0" />
-      <title>CricBet99</title>
+      <title>CRICBET99 LOGIN</title>
       <style>
 	  body{
 	  -webkit-touch-callout: none;
