--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
         <title>Welcome to Cricbet99</title>
         <meta name="title" content="Welcome to Cricbet99" />
-        <meta name="description" content="CricBet99 is India's no.1 betting website. We cover all major sports and major casino games. Automatic deposit and withdrawal. Best odds, 24/7 customer service and referral bonus. Login to CricBet99.pro account now." />
+        <meta name="description" content="CricBet99 is India's no.1 betting website. We cover all major sports and major casino games. Automatic deposit and withdrawal. Best odds, 24/7 customer service and referral bonus. Login to CricBet99.com account now." />
         <meta name="keywords" content="welcome to cricbet99, cricbet99, cricbet99 login, cricbet99.com, cricbet99.club, cricbet99 login link, cricbet99 reddy anna, cricbet99 mahadevbook, cricbet99 register login, cricbet99 download, cricbet99 link, cricbet99 ID login, cricbet99 download apk, cricbet99 sign up, cricbet99 ID, cricbet99 club" />
         <link rel="canonical" href="https://crricbet99.com/" />
         
