--- a/withdrawal.html
+++ b/withdrawal.html
@@ -87,9 +87,9 @@
          class="logo-login"
          src="assets/images/logo.png"/>
       </div>
-      <p> 2 Factor Authentication enabled.<br>
-         Please enter withdrawal password to login 
-         securely.
+      <p>2 Factor Authentication Enabled.<br>
+         Please Enter Withdrawal Password to Login 
+         Securely.
       </p>
     <form class="form-horizontal" role="form" method="post">
   <div class="form-group m-b-20">
